# FocusMamba

./: .gitignore  PAPER.md  README.md  codebase_outline.md  config.yaml  evaluate_noise_sweep.py  hpc_data_pipeline_plan.md  overfit_probe.ipynb  pyproject.toml  requirements.txt  run_train.sh  setup.py  test_training.py  test_wild.py  train.py
configs/: base.yaml
configs/experiments/: ablation_no_temporal.yaml  distill_v1.yaml  tartanair_GT.yaml  tartanair_focusmamba_v2_distill_50ep.yaml  tartanair_focusmamba_v2_smoke_distill.yaml  tartanair_v2.yaml  tartanair_v3.yaml  tartanair_vda_small_gt.yaml  tartanair_vda_small_scratch_distill_full.yaml  trial_youtube_vos.yaml
configs/model/: mamba_depth_base.yaml  mamba_depth_large.yaml  mamba_depth_small.yaml
dataloader/: __init__.py  degradation.py  focus_dataset.py  inspect_coc_distribution.py  live_distill_dataset.py  tartanair_v2.py  wild_dataset.py  youtube_vos.py
evaluation/: __init__.py  benchmark.py
evaluation/baselines/: __init__.py  run_depth_anything.py  run_framewise_robust.py  run_metric3d.py  run_unidepth.py
evaluation/metrics/: __init__.py  autofocus_metrics.py  depth_metrics.py  temporal_metrics.py
evaluation/protocols/: __init__.py  clean_baseline.py  iphone_lidar_eval.py  latency_eval.py  per_degradation.py
evaluation/visualise/: __init__.py  degradation_sweep_plot.py  error_maps.py  temporal_comparison.py
inference/: __init__.py  autofocus_interface.py  demo.py  realtime_engine.py
inference/export/: __init__.py  export_coreml.py  export_onnx.py  export_tensorrt.py
jobs/: check_teachers.py  launch_overnight_suite_20260304.sh  launch_tiny_depth_recovery_20260306.sh  launch_tiny_dual_curriculum_full_50ep.sh  launch_tiny_dual_curriculum_smoke_20260305.sh  launch_tiny_stageB_recovery_20260305.sh  launch_vda_small_scratch_ablation_suite.sh  run_cache_teachers.sh  run_test.sh  run_train.sh  run_train_debug.sh  run_train_focusmamba_v2_distill_50ep.sh  run_train_focusmamba_v2_smoke_distill.sh  run_train_v3.sh  run_train_vda_small_gt.sh  run_train_vda_small_scratch_distill.sh  run_train_vda_tiny_scratch_distill_mtkd_50ep.sh  smoke_test_cache.sh
logs/: focusmamba_trial_2503263.err  focusmamba_trial_2503263.out
models/: __init__.py  decoder.py  depth_model.py  encoder.py  focus_mamba.py  focus_transformer.py  mamba_block.py  roi_conditioning.py  transformer_block.py  video_depth_anything_model.py
models/encoders/: __init__.py  pretrained_init.py
models/teachers/: __init__.py  depth_anything_v3.py  depth_pro.py  metric3d_v2.py  teacher_base.py  video_teacher.py
tests/: test_degradation_pipeline.py  test_distillation_loss.py  test_metric_scale.py  test_model_forward.py  test_realtime_engine.py  test_temporal_consistency.py
tools/: cache_teacher_labels.py  capture_iphone_dataset.py  compare_teacher_outputs.py  download_datasets.sh  make_benchmark_report.py  profile_model.py  visualise_degradation.py
training/: __init__.py  curriculum.py  ema.py  logging_utils.py  prefetch.py  trainer.py
utils/: __init__.py  loss.py  metrics.py  param_check.py
(+11 files in other folders)
