[project]
name = "focusmamba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=1.3",
    "einops>=0.7",
    "fvcore>=0.1.5.post20221221",
    "imageio[ffmpeg]>=2.33",
    "kornia>=0.7",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "opencv-python>=4.8",
    "pandas>=2.1",
    "pytest>=7.4",
    "pytorch-msssim>=1.0.0",
    "pyyaml>=6.0",
    "seaborn>=0.13",
    "tensorboard>=2.15",
    "torch>=2.2",
    "torchvision>=0.17",
    "tqdm>=4.66",
]
