[project]
name = "focusmamba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=1.3",
    "einops>=0.7",
    "fvcore>=0.1.5.post20221221",
    "imageio[ffmpeg]>=2.33",
    "kornia>=0.7",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "opencv-python>=4.8",
    "pandas>=2.1",
    "pytest>=7.4",
    "pytorch-msssim>=1.0.0",
    "pyyaml>=6.0",
    "seaborn>=0.13",
    "tensorboard>=2.15",
    "torch>=2.7",
    "torchvision>=0.17",
    "transformers<5",
    "tqdm>=4.66",
    # Teacher runtime deps (minimal — no heavy extras like open3d, pycolmap, xformers)
    "addict>=2.4",             # Depth-Anything-3 config (omegaconf transitive dep)
    "e3nn>=0.5",               # Depth-Anything-3 pose utils
    "easydict>=1.10",          # Video-Depth-Anything
    "evo>=1.28",               # Depth-Anything-3 trajectory evaluation (eagerly imported)
    "huggingface-hub>=0.20",   # Depth-Anything-3 from_pretrained
    "moviepy==1.0.3",          # Depth-Anything-3 export utils (2.x removed moviepy.editor)
    "omegaconf>=2.3",          # Depth-Anything-3 config loader
    "pillow-heif>=0.13",       # ml-depth-pro
    "plyfile>=1.0",            # Depth-Anything-3 export utils
    "safetensors>=0.4",        # Depth-Anything-3 weights
    "timm>=0.9",               # ml-depth-pro (also installed via uv pip install -e)
    "trimesh>=4.0",            # Depth-Anything-3 mesh export (eagerly imported)
    "tartanair",
    "mamba-ssm",
    "causal-conv1d",
]

# ── PyTorch index ─────────────────────────────────────────────────────────────
[tool.uv.sources]
torch       = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
tartanair = { git = "https://github.com/castacks/tartanairpy.git" }
mamba-ssm = { git = "https://github.com/state-spaces/mamba.git", rev = "v2.2.4" }
causal-conv1d = { git = "https://github.com/Dao-AILab/causal-conv1d.git", rev = "v1.5.0.post8" }

[[tool.uv.index]]
name = "pytorch-cu128"
url  = "https://download.pytorch.org/whl/cu128"
explicit = true

# ── Cross-Architecture Lock configuration ─────────────────────────────────────
[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'"
]
no-build-isolation-package = ["mamba-ssm", "causal-conv1d"]
